--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                                 <td class="table__right">$ 0.07 <span class="up-trend"></span></td>                                
                             </tr>
                             <tr>
-                                <td>Ripple</td>
+                                <td>Cardano</td>
                                 <td class="table__right">$ 2.15 <span class="down-trend"></span></td>                                
                             </tr>
                             <tr>
-                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-left">Solana</td>
                                 <td class="table__bottom-right table__right">$ 4.96 <span class="down-trend"></span></td>                                
                             </tr>
                         </table>
