--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/tablet.css" media="(min-width: 930px)">
@@ -13,14 +14,14 @@
 <body>
     <header>
         <img src="./assets/img/logo.svg" alt="">
-        <div class="header--title--container">
-            <h1>La próxima revolución en el intercambio de criptomonedas</h1>
-            <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
+        <div class="header--title--container ">
+            <h1 class = "animate__animated animate__backInLeft">La próxima revolución en el intercambio de criptomonedas</h1>
+            <p class = "animate__animated animate__backInLeft">Batabit te ayuda a navegar entre los diferentes precios y tendencias</p>
+            <a href="#plans"  class="header--button animate__animated animate__pulse animate__infinite ">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
-        <section class="main-exchange-container">
+        <section class="main-exchange-container ">
             <div class="backgroundImg"></div>
             <div class="main-exchange-container--title">
                 <h2>Visibilizamos todas las tasas de cambio.</h2>
