--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/img/logo.svg" alt="">
+        <img class="animate__animated animate__backInLeft" src="./assets/img/logo.svg" alt="">
         <div class="header--title--container ">
             <h1 class = "animate__animated animate__backInLeft">La próxima revolución en el intercambio de criptomonedas</h1>
             <p class = "animate__animated animate__backInLeft">Batabit te ayuda a navegar entre los diferentes precios y tendencias</p>
